2011-05-30  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves: #347705
	* src/org/eclipse/linuxtools/internal/cdt/libhover/devhelp/ParseDevHelp.java (DevHelpParser.parse): Default
	to use .devhelp2 files if found, then fall-back to .devhelp files. 
	(DevHelpParser.parse): Add devhelp2 support.
	
2011-03-31  Jeff Johnston  <jjohnstn@redhat.com>

	* Initial check-in.