@@ -5,4 +5,5 @@ bin.includes = plugin.xml,\
                .,\
                html/,\
                *.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html
