@@ -1,3 +1,8 @@
+2011-06-02  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* about.html: New file.
+	* build.properties: Add about.html.
+
 2011-05-30  Jeff Johnston  <jjohnstn@redhat.com>
 
 	Resolves: #347705
